2000-08-26  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_man_pages): Generate install targets for man
	even if man_MANS not defined.  From `danpb'.  Fixes PR automake/73.

	* m4/depend.m4 (depcpp): Use `-o conftest.o'.
	Fix for PR automake/74.  From js pendry.

2000-08-20  Eli Zaretskii  <eliz@is.elta.co.il>

	* depcomp (gcc): Support DOS-style absolute file names with drive
	letters.

2000-08-06  Jim Meyering  <meyering@lucent.com>

	* automake.in (handle_dependencies): Set $require_file_found{'depcomp'}
	if the depcomp file exists, before calling require_config_file on
	`depcomp'.  This makes require_file_internal skip its buggy existence
	test that would make automake fail (with `required file `lib/depcomp'
	not found') when AC_CONFIG_AUX_DIR is not set.

	This change change does not fix the existing bug where, if `depcomp'
	is not present in the build directory (at the top level), automake
	still gives the inaccurate diagnostic about *lib*/depcomp rather
	than ./depcomp.

2000-08-05  Jim Meyering  <meyering@lucent.com>

	* m4/header.m4 (AM_CONFIG_HEADER): Fix typo in last change:
	add missing closing bracket and closing parenthesis.
	Don't quote the first argument to AC_OUTPUT_COMMANDS.
	Backslash-escape the backquotes and `$' in `am_indx'-incrementing stmt.

2000-08-04  Tom Tromey  <tromey@cygnus.com>

	Idea from Nicolas Thiery:
	* automake.texi (Tests): Document DEJATOOL as a list.
	* dejagnu.am (RUNTESTDEFAULTFLAGS): Use $$tool, not $(DEJATOOL).
	(check-DEJAGNU): Run runtest in a loop.

2000-08-02  Akim Demaille  <akim@epita.fr>

	* m4: Quote properly the name of the macros being defined.
	Use `#' instead of `dnl' where appropriate.
	* m4/header.m4 (AM_CONFIG_HEADER): Get rid of changequote, just
	quote.
	Don't quote passive characters.
	Pull the AC_PREREQ outside the macro.
	* m4/init.m4: Pull the AC_PREREQ outside the macro.

2000-07-28  Tom Tromey  <tromey@cygnus.com>

	* lisp.am (uninstall-@DIR@LISP): Prefix file with $(DESTDIR).