@@ -1,5 +1,8 @@
 2000-08-26  Tom Tromey  <tromey@cygnus.com>
 
+	* subdirs.am (maintainer-clean-recursive): Always run clean rules
+	in `.' after all subdirs.  Fixes PR automake/3 and PR automake/24.
+
 	* automake.in (handle_man_pages): Generate install targets for man
 	even if man_MANS not defined.  From `danpb'.  Fixes PR automake/73.
 
